--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,33 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <name>Distributed Yatspec</name>
+    <description>Using Yatspec, but the test doubles do the logging</description>
+    <url>https://github.com/muirandy/distributed-yatspec</url>
     <groupId>com.github.muirandy</groupId>
     <artifactId>distributed-yatspec</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Andy Muir</name>
+            <email>muirandy@yahoo.co.uk</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:muirandy/distributed-yatspec.git</connection>
+        <developerConnection>scm:git:git@github.com:muirandy/distributed-yatspec.git</developerConnection>
+        <url>git@github.com:muirandy/distributed-yatspec.git</url>
+    </scm>
 
     <properties>
         <maven.compiler.target>1.11</maven.compiler.target>
@@ -51,9 +75,21 @@
         <dependency>
             <groupId>com.github.nickmcdowall</groupId>
             <artifactId>yatspec</artifactId>
-            <version>2020.3.2</version>
+            <version>2020.3.8</version>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
@@ -74,6 +110,51 @@
                         <include>**/*Test.java</include>
                     </includes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadoc</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-source</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.0-M1</version>
             </plugin>
         </plugins>
     </build>
