--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <url>https://github.com/muirandy/distributed-yatspec</url>
     <groupId>com.github.muirandy</groupId>
     <artifactId>distributed-yatspec</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <licenses>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>com.github.muirandy</groupId>
             <artifactId>distributed-living-documentation-api</artifactId>
-            <version>1.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.nickmcdowall</groupId>
