--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <name>Distributed Yatspec</name>
@@ -9,7 +7,7 @@
     <url>https://github.com/muirandy/distributed-yatspec</url>
     <groupId>com.github.muirandy</groupId>
     <artifactId>distributed-yatspec</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.4</version>
     <packaging>jar</packaging>
 
     <licenses>
@@ -30,7 +28,8 @@
         <connection>scm:git:git@github.com:muirandy/distributed-yatspec.git</connection>
         <developerConnection>scm:git:git@github.com:muirandy/distributed-yatspec.git</developerConnection>
         <url>git@github.com:muirandy/distributed-yatspec.git</url>
-    </scm>
+      <tag>distributed-yatspec-1.4</tag>
+  </scm>
 
     <properties>
         <maven.compiler.target>1.11</maven.compiler.target>
@@ -70,7 +69,7 @@
         <dependency>
             <groupId>com.github.muirandy</groupId>
             <artifactId>distributed-living-documentation-api</artifactId>
-            <version>${project.version}</version>
+            <version>1.4</version>
         </dependency>
         <dependency>
             <groupId>com.github.nickmcdowall</groupId>
