--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <url>https://github.com/muirandy/distributed-yatspec</url>
     <groupId>com.github.muirandy</groupId>
     <artifactId>distributed-yatspec</artifactId>
-    <version>1.4</version>
+    <version>1.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <licenses>
@@ -28,7 +28,7 @@
         <connection>scm:git:git@github.com:muirandy/distributed-yatspec.git</connection>
         <developerConnection>scm:git:git@github.com:muirandy/distributed-yatspec.git</developerConnection>
         <url>git@github.com:muirandy/distributed-yatspec.git</url>
-      <tag>distributed-yatspec-1.4</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>com.github.muirandy</groupId>
             <artifactId>distributed-living-documentation-api</artifactId>
-            <version>1.4</version>
+            <version>1.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.nickmcdowall</groupId>
